improve the appearance on smaller devices

--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>申請入學採計科目篩選器</title>
+
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="style.css">
+
 	<script>
 	function search(){
 		var xhttp = new XMLHttpRequest();
@@ -21,8 +26,11 @@
 	</script>
 </head>
 <body>
-	<div class="container">
-		申請入學採計科目篩選器
+	<div class="jumbotron jumbotron-fluid">
+		<div class="container">
+	  	<h1>申請入學採計科目篩選器</h1>
+			<p>來看看你想讀的科系採計哪些科目吧！</p>
+		</div>
 	</div>
 
 	<div class="container form-group">
