--- a/index.html
+++ b/index.html
@@ -10,26 +10,29 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" href="style.css?v=20190121">
+	<link rel="stylesheet" href="style.css?v=1">
 
 	<script>
 	// search funtion; uses ajax to process the result.
 	function search(){
-		$("#loading").html(
-			"<div class='spinner-border text-secondary' role='status'><span class='sr-only'>Loading...</span></div>"
-		);
-		var xhttp = new XMLHttpRequest();
-		xhttp.onreadystatechange = function() {
-			if (this.readyState == 4 && this.status == 200) {
-				$("#result").html(this.responseText);
-				$("#loading").hide();
-			}
-		};
-		xhttp.open("GET", "result.php?qd=" + $("#qd")[0].value + "&qs=" + $("#qs")[0].value, true);
-		xhttp.send();
+		$.ajax({
+			type: "GET",
+			data: {qd: $("#qd")[0].value, qs: $("#qs")[0].value},
+	    url: "result.php",
+	    beforeSend: function() {
+				// show loading spinner
+	      $("#loading").show();
+	    },
+	    success: function(data) {
+				$("#result").html(data);
+				// hide loading spinner
+	      $("#loading").hide();
+	    }
+		});
 	}
-	// auto search when the page is loaded.
+
 	$(document).ready(function(){
+		// auto search when the page is loaded
 		search();
 	});
 	</script>
@@ -58,6 +61,10 @@
 	<!-- the location to place the result table -->
 	<div id="result"></div>
   <!-- loading spinner -->
-  <div id="loading" class="text-center"></div>
+	<div id="loading" class="text-center">
+  	<div class="spinner-border text-secondary" role="status">
+    	<span class="sr-only">載入中...</span>
+  	</div>
+	</div>
 </body>
 </html>
