--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       url: "result.php",
       beforeSend: function() {
         // show loading spinner
-        $("#loading").show();
+        $(".loading").show();
       },
       success: function(data) {
         $("#result").html(data);
         // hide loading spinner
-        $("#loading").hide();
+        $(".loading").hide();
       }
     });
   }
@@ -54,14 +54,17 @@
       </div>
       <input type="text" class="form-control" id="qs" placeholder="學校名稱" value="" onkeyup="search()">
       <div class="input-group-append">
-        <button class="btn btn-primary" onclick="search()">搜尋</button>
+        <button class="btn btn-primary" onclick="search()">
+          <span class="spinner-border spinner-border-sm loading" role="status" aria-hidden="true"></span>
+          搜尋
+        </button>
       </div>
     </div>
   </div>
   <!-- the location to place the result table -->
   <div id="result"></div>
   <!-- loading spinner -->
-  <div id="loading" class="text-center">
+  <div class="text-center loading">
     <div class="spinner-border text-secondary" role="status">
       <span class="sr-only">載入中...</span>
     </div>
