reduce font size on low-resolution devices

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <!-- title bar -->
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
-      <h1>申請入學採計科目篩選器</h1>
+      <p id="title_text">申請入學採計科目篩選器</p>
       <p>來看看你想讀的科系採計哪些科目吧！</p>
     </div>
   </div>
