--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
   <!-- search form -->
   <div class="container form-group">
     <div class="input-group mb-3">
-      <input type="text" class="form-control" id="qd" placeholder="科系名稱" value="" onkeyup="search()">
+      <input type="text" class="form-control" id="qd" placeholder="科系名稱" value="" oninput="search()">
       <div class="input-group-append">
         <span class="input-group-text">@</span>
       </div>
-      <input type="text" class="form-control" id="qs" placeholder="學校名稱" value="" onkeyup="search()">
+      <input type="text" class="form-control" id="qs" placeholder="學校名稱" value="" oninput="search()">
       <div class="input-group-append">
         <button class="btn btn-primary" onclick="search()">
           <span class="spinner-border spinner-border-sm loading" role="status" aria-hidden="true"></span>
