--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     </div>
   </div>
   <!-- search form -->
-  <div class="container form-group">
-    <div class="input-group mb-3">
+  <div class="container">
+    <div class="form-group input-group mb-3">
       <input type="text" class="form-control" id="qd" placeholder="科系名稱" value="" oninput="search()">
       <div class="input-group-append">
         <span class="input-group-text">@</span>
@@ -60,13 +60,13 @@
         </button>
       </div>
     </div>
-  </div>
-  <!-- the location to place the result table -->
-  <div id="result"></div>
-  <!-- loading spinner -->
-  <div class="text-center loading">
-    <div class="spinner-border text-secondary" role="status">
-      <span class="sr-only">載入中...</span>
+    <!-- the location to place the result table -->
+    <div id="result"></div>
+    <!-- loading spinner -->
+    <div class="text-center loading">
+      <div class="spinner-border text-secondary" role="status">
+        <span class="sr-only">載入中...</span>
+      </div>
     </div>
   </div>
 </body>
