reduce text length of options on small devices

--- a/index.html
+++ b/index.html
@@ -93,23 +93,23 @@
       <span id="text_advanced">不採計：</span>
       <div class="custom-control custom-checkbox custom-control-inline">
         <input type="checkbox" id="check1" class="custom-control-input" onclick="search()">
-        <label class="custom-control-label subject" for="check1">國文</label>
+        <label class="custom-control-label subject-title" for="check1">國文</label>
       </div>
       <div class="custom-control custom-checkbox custom-control-inline">
         <input type="checkbox" id="check2" class="custom-control-input" onclick="search()">
-        <label class="custom-control-label subject" for="check2">英文</label>
+        <label class="custom-control-label subject-title" for="check2">英文</label>
       </div>
       <div class="custom-control custom-checkbox custom-control-inline">
         <input type="checkbox" id="check3" class="custom-control-input" onclick="search()">
-        <label class="custom-control-label subject" for="check3">數學</label>
+        <label class="custom-control-label subject-title" for="check3">數學</label>
       </div>
       <div class="custom-control custom-checkbox custom-control-inline">
         <input type="checkbox" id="check4" class="custom-control-input" onclick="search()">
-        <label class="custom-control-label subject" for="check4">社會</label>
+        <label class="custom-control-label subject-title" for="check4">社會</label>
       </div>
       <div class="custom-control custom-checkbox custom-control-inline">
         <input type="checkbox" id="check5" class="custom-control-input" onclick="search()">
-        <label class="custom-control-label subject" for="check5">自然</label>
+        <label class="custom-control-label subject-title" for="check5">自然</label>
       </div>
     </div>
     <!-- the location to place the result table -->
