set default option in advanced_options

--- a/index.html
+++ b/index.html
@@ -68,31 +68,31 @@
     <div id="advanced_options" class="collapse float-sm-right">
       <label for="s1">國文：</label>
       <select id="s1" onchange="update()">
-        <option value="1">不限</option>
+        <option value="1" selected="selected">不限</option>
         <option value="2">採計</option>
         <option value="3">不採計</option>
       </select>
       <label for="s2">&nbsp;英文：</label>
       <select id="s2" onchange="update()">
-        <option value="1">不限</option>
+        <option value="1" selected="selected">不限</option>
         <option value="2">採計</option>
         <option value="3">不採計</option>
       </select>
       <label for="s3">&nbsp;數學：</label>
       <select id="s3" onchange="update()">
-        <option value="1">不限</option>
+        <option value="1" selected="selected">不限</option>
         <option value="2">採計</option>
         <option value="3">不採計</option>
       </select>
       <label for="s4">&nbsp;社會：</label>
       <select id="s4" onchange="update()">
-        <option value="1">不限</option>
+        <option value="1" selected="selected">不限</option>
         <option value="2">採計</option>
         <option value="3">不採計</option>
       </select>
       <label for="s5">&nbsp;自然：</label>
       <select id="s5" onchange="update()">
-        <option value="1">不限</option>
+        <option value="1" selected="selected">不限</option>
         <option value="2">採計</option>
         <option value="3">不採計</option>
       </select>
