--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="style.css?v=1">
-  <!-- search.js -->
-  <script src="search.js"></script>
+  <!-- common.js -->
+  <script src="common.js"></script>
 </head>
 <body>
   <!-- title bar -->
