--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
         <tr>
           <th width="20%" class="align-middle">學校</th>
           <th width="30%" class="align-middle">科系</th>
-          <th width="10%" id="t1" class="subject-title align-middle">國文</th>
-          <th width="10%" id="t2" class="subject-title align-middle">英文</th>
-          <th width="10%" id="t3" class="subject-title align-middle">數學</th>
-          <th width="10%" id="t4" class="subject-title align-middle">社會</th>
-          <th width="10%" id="t5" class="subject-title align-middle">自然</th>
+          <th width="10%" id="t1" class="subject subject-title align-middle">國文</th>
+          <th width="10%" id="t2" class="subject subject-title align-middle">英文</th>
+          <th width="10%" id="t3" class="subject subject-title align-middle">數學</th>
+          <th width="10%" id="t4" class="subject subject-title align-middle">社會</th>
+          <th width="10%" id="t5" class="subject subject-title align-middle">自然</th>
         </tr>
       </thead>
       <tbody id="result_content">
