--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
   <!-- external css -->
-  <link rel="stylesheet" href="style.css?v=1">
+  <link rel="stylesheet" href="style.css?v=2">
   <!-- external js -->
-  <script src="common.js?v=1"></script>
+  <script src="common.js?v=2"></script>
 </head>
 <body>
   <!-- title bar -->
@@ -43,45 +43,56 @@
     </div>
     <!-- advanced options -->
     <div id="advanced_options" class="collapse float-sm-right form-inline mb-3">
-      <div class="form-group">
-        <label for="sel1" class="option-title">&nbsp;國文：</label>
+      <div class="form-group ml-2 mb-0">
+        <label for="sel1" class="subject-title">國文：</label>
         <select id="sel1" class="custom-select" onchange="update()">
           <option value="1" selected="selected">不限</option>
           <option value="2">採計</option>
           <option value="3">不採計</option>
         </select>
       </div>
-      <div class="form-group">
-        <label for="sel2" class="option-title">&nbsp;英文：</label>
+      <div class="form-group ml-2 mb-0">
+        <label for="sel2" class="subject-title">英文：</label>
         <select id="sel2" class="custom-select" onchange="update()">
           <option value="1" selected="selected">不限</option>
           <option value="2">採計</option>
           <option value="3">不採計</option>
         </select>
       </div>
-      <div class="form-group">
-        <label for="sel3" class="option-title">&nbsp;數學：</label>
+      <div class="form-group ml-2 mb-0">
+        <label for="sel3" class="subject-title">數學：</label>
         <select id="sel3" class="custom-select" onchange="update()">
           <option value="1" selected="selected">不限</option>
           <option value="2">採計</option>
           <option value="3">不採計</option>
         </select>
       </div>
-      <div class="form-group">
-        <label for="sel4" class="option-title">&nbsp;社會：</label>
+      <div class="form-group ml-2 mb-0">
+        <label for="sel4" class="subject-title">社會：</label>
         <select id="sel4" class="custom-select" onchange="update()">
           <option value="1" selected="selected">不限</option>
           <option value="2">採計</option>
           <option value="3">不採計</option>
         </select>
       </div>
-      <div class="form-group">
-        <label for="sel5" class="option-title">&nbsp;自然：</label>
+      <div class="form-group ml-2 mb-0">
+        <label for="sel5" class="subject-title">自然：</label>
         <select id="sel5" class="custom-select" onchange="update()">
           <option value="1" selected="selected">不限</option>
           <option value="2">採計</option>
           <option value="3">不採計</option>
         </select>
+      </div>
+      <div class="form-group ml-2 mb-0">
+        <span class="ml-2" id="mode-title">搜尋模式：</span>
+        <div class="custom-control custom-radio custom-control-inline">
+          <input type="radio" id="mode-indexof" name="mode" class="custom-control-input" value="1" onchange="update()" checked="checked">
+          <label class="custom-control-label" for="mode-indexof">一般</label>
+        </div>
+        <div class="custom-control custom-radio custom-control-inline">
+          <input type="radio" id="mode-regex" name="mode" class="custom-control-input" value="2" onchange="update()">
+          <label class="custom-control-label" for="mode-regex">Regex</label>
+        </div>
       </div>
     </div>
     <!-- result table -->
